--- a/pages/home.htm
+++ b/pages/home.htm
@@ -19,7 +19,7 @@ thumb_height = 361
 limit = 3
 upcoming = 0
 marked_for_display = 1
-templates = "template2"
+templates = "template3"
 
 [jumbotron vision]
 jumbotron = "mission"
@@ -80,7 +80,6 @@ description_limit = 0
 	<div class="container">
 		<h1 class="base_heading">Events</h1>
 		{% component 'Timeline' %}
-		
 	</div>
 </div>
 <div class="container-fluid bg-secondary subscribe_holder_bg">
@@ -89,7 +88,7 @@ description_limit = 0
 	<div class="row between-xs">
 		<div class="col-lg-6 col-sm-5 col-xs-12">
 			<div class="twitter-widget">
-			    <a class="twitter-timeline" href="https://twitter.com/RESTCOAST_H2020?ref_src=twsrc%5Etfw">Tweets by U3G_H2020</a>
+			    <a class="twitter-timeline" href="https://twitter.com/johanna_witzell?ref_src=twsrc%5Etfw">Tweets by johanna_witzell</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 			</div>
 		</div>
