--- a/pages/Forgot.htm
+++ b/pages/Forgot.htm
@@ -1,4 +1,4 @@
-title = "Forgot"
+title = "Password reset"
 url = "/forgot"
 layout = "default"
 is_hidden = 0
@@ -15,7 +15,6 @@ paramCode = "code"
 			<h1 class="page_heading">Password reset</h1>
 		</div>
 		<div class="col-md-6 col-xs-12 split right">
-			<h1 class="page_heading hidden-md">Password reset</h1>
 			<div class="centered">
 				{% if resetPassword.code == null %}
 				{% partial 'components/resetpassword/restore' %}
