--- a/pages/about.htm
+++ b/pages/about.htm
@@ -9,69 +9,41 @@ robot_follow = "follow"
 
 [siteSearchInclude]
 
-[jumbotron background]
-jumbotron = "backgound"
-title = 1
+[jumbotron intro]
+jumbotron = "about-intro"
+title = 0
 background = "#ffffff"
 templates = "template1"
 description_limit = 0
 
-[jumbotron goals]
-jumbotron = "objectives"
-title = 1
+[jumbotron background]
+jumbotron = "about-page-image"
+title = 0
 background = "unset"
 templates = "template1"
 description_limit = 0
 
-[accordion]
-maxItems = 10
-accordion = 1
-elementId = "structure"
-active = 0
-collapsible = "true"
-heightStyle = "content"
-iconsHeader = "ui-icon-blank"
-iconsHeaderActive = "ui-icon-blank"
-templates = "template3"
-
 [jumbotron]
-jumbotron = "about-page-image"
-background = "#ffffff"
-templates = "template1"
-description_limit = 0
-
-[jumbotron jumbotron2]
-jumbotron = "u3g-will-address"
-background = "#ffffff"
+jumbotron = "network-will"
+title = 1
+background = "#E4E7E7"
 templates = "template1"
 description_limit = 0
 ==
 {% component 'siteSearchInclude' %}
 <div class="container">
-    <h1 class="page_heading ml-1">About</h1>
     <div class="row middle-xs">
         <div class="col-md-6 col-xs-12">
-             <div class="we_will">
-                {% component 'jumbotron2' %}
+             <div class="intro">
+                 {% component 'intro' %}
              </div>
+        </div>
+        <div class="col-md-6 col-xs-12">
              <div class="background">
                 {% component 'background' %}
              </div>
         </div>
-        <div class="col-md-6 col-xs-12">
-            {% component 'jumbotron' %}
-        </div>
     </div>
-    <div class="row top-xs">
-        <div class="col-md-6 col-xs-12 about_goals_page">
-            {% component 'goals' %}
-        </div>
-        <div class="col-md-6 col-xs-12">
-            <div class="container-fluid work_packages " style="background-color:unset;">
-    	        <div class="container">
-                    {% component 'accordion' %}
-                </div>
-            </div>
-        </div>
-    </div>
+    
 </div>
+{% component 'jumbotron' %}
