--- a/pages/logo.htm
+++ b/pages/logo.htm
@@ -1,4 +1,4 @@
-title = "Logo"
+title = "Media center"
 url = "/media-center/logo"
 layout = "default"
 is_hidden = 0
@@ -50,9 +50,8 @@ return Redirect::to('/media-center/logo');
 ==
 <div class="container">
 
-	<a href="/media-center" class="back-to"> &#10094; Back to Media center</a><br><br>
 
-	<h1 class="page_heading">REST-COAST Logo Pack</h1>
+	<h1 class="display-1">Logo</h1>
 
 
 
@@ -69,34 +68,28 @@ return Redirect::to('/media-center/logo');
 	{% if record.logo_image %}
 
 
-	<div class="row card-container-row mb-4 start-xs">
-		<div class="col-xs-12">
-			<p><img src="{{record.logo_image.path}}" title="{{record.name}}" style="max-width: 250px;"></p>
-		</div>
+	<div class="row card-container-row mb-4 center-xs">
 		{% if record.file_jpg %}
 		<div class="col-md-2 col-xs-12">
 			<div class="card-container text-center">
-				<span class="card_image_container" style="background: url({{'pensoft/file-jpg.svg'|media}}) center center no-repeat; " title="Logo"></span>
-				<span class="card_title">JPG, {{record.file_jpg.size}}</span><br>
-				<br><a href="{{ ''| page }}?{{queries}}&download={{record.file_jpg.id}}&file_name={{record.file_jpg.file_name|replace({' ': '_'})}}" title="Logo pack" class="btn btn-primary">Download</a>
+				<span class="card_image_container" title="Logo"><img src="{{record.logo_image.path}}" title="{{record.name}}"></span>
+				<a href="{{ ''| page }}?{{queries}}&download={{record.file_jpg.id}}&file_name={{record.file_jpg.file_name|replace({' ': '_'})}}" title="Logo pack" class="btn btn-primary">Download .jpg</a>
 			</div>
 		</div>
 		{% endif %}
 		{% if record.file_png %}
 		<div class="col-md-2 col-xs-12">
 			<div class="card-container text-center">
-				<span class="card_image_container" style="background: url({{'pensoft/file-png.svg'|media}}) center center no-repeat;" title="Logo"></span>
-				<span class="card_title">PNG, {{record.file_png.size}}</span><br>
-				<br><a href="{{ ''| page }}?{{queries}}&download={{record.file_png.id}}&file_name={{record.file_png.file_name|replace({' ': '_'})}}" title="Logo pack" class="btn btn-primary">Download</a>
+				<span class="card_image_container" title="Logo"><img src="{{record.logo_image.path}}" title="{{record.name}}"></span>
+				<a href="{{ ''| page }}?{{queries}}&download={{record.file_png.id}}&file_name={{record.file_png.file_name|replace({' ': '_'})}}" title="Logo pack" class="btn btn-primary">Download .png</a>
 			</div>
 		</div>
 		{% endif %}
 		{% if record.file_eps %}
 		<div class="col-md-2 col-xs-12">
 			<div class="card-container text-center">
-				<span class="card_image_container" style="background: url({{'pensoft/file-eps.svg'|media}}) center center no-repeat;" title="Logo"></span>
-				<span class="card_title">SVG, vector, {{record.file_eps.size}}</span><br>
-				<br><a href="{{ ''| page }}?{{queries}}&download={{record.file_eps.id}}&file_name={{record.file_eps.file_name|replace({' ': '_'})}}" title="Logo pack" class="btn btn-primary">Download</a>
+				<span class="card_image_container" title="Logo"><img src="{{record.logo_image.path}}" title="{{record.name}}"></span>
+				<a href="{{ ''| page }}?{{queries}}&download={{record.file_eps.id}}&file_name={{record.file_eps.file_name|replace({' ': '_'})}}" title="Logo pack" class="btn btn-primary">Download .svg</a>
 			</div>
 		</div>
 		{% endif %}
