--- a/pages/news.htm
+++ b/pages/news.htm
@@ -75,9 +75,10 @@ $this['related'] = $related;
 }
 ?>
 ==
-<div class="container">
+
 
 	{% if is_detail_page %}
+<div class="container">
 	<div class="row single-news-item">
 		<div class="col-xs-12 col-md-5">
 			{% if article.cover %}
@@ -105,12 +106,16 @@ $this['related'] = $related;
 	<script>
 		createTippy('#share-{{slug}}', {content: '<div class="icons">{% if this.theme.facebook %}<a class="fb-xfbml-parse-ignore pr p-facebook" href="https://www.facebook.com/sharer/sharer.php?u={{page_url}}&amp;src=sdkpreparse" target="_blank" ></a>{% endif %}{% if this.theme.twitter %}<a class="pr p-twitter" href="https://twitter.com/intent/tweet?text={{encoded_title}}{{page_url}}" target="_blank"></a>{% endif %}{% if this.theme.linkedin %}<a class="pr p-linkedin" href="https://www.linkedin.com/sharing/share-offsite/?url={{page_url}}" target="_blank"></a>{% endif %}</div>'})
 	</script>
+</div>
 	{% else %}
-	<h1 class="page_heading" style="margin-left: 5px;">News</h1>
-	<div class="row">
-		<div class="col-xs">
-			{% component 'list' %}
+<div class="container-fluid partners_background">
+	<div class="container">
+		<h1 class="display-1">Latest News</h1>
+		<div class="row">
+			<div class="col-xs">
+				{% component 'list' %}
+			</div>
 		</div>
 	</div>
-	{% endif %}
 </div>
+	{% endif %}
