--- a/pages/library.htm
+++ b/pages/library.htm
@@ -1,16 +1,16 @@
-url = "/library"
+url = "/resources"
 layout = "default"
-title = "Library"
+title = "Resources"
 is_hidden = 0
 robot_index = "index"
 robot_follow = "follow"
-
 ==
 <div class="container">
 	<div class="row between-sm between-xs">
 		<div class="col-sm-2 col-xs-6">
 			<div class="card-container text-center">
-				<a href="{{url('library')}}" title="Publications">
+				<!--<a href="{{url('/resources/publications')}}" title="Publications">-->
+				<a href="" title="Publications">
 					<span class="card_image_container" style="background: url({{'pensoft/publications.svg'|media}}) center center no-repeat;" href="{{url('library')}}" title="Publications"></span>
 					<span class="media_label">Publications</span>
 				</a>
@@ -19,7 +19,8 @@ robot_follow = "follow"
 		
 		<div class="col-sm-2 col-xs-6">
 			<div class="card-container text-center">
-				<a href="{{url('library')}}" title="Wiki">
+				<!--<a href="{{'wiki'|page}}" title="Wiki">-->
+				<a href="" title="Wiki">
 					<span class="card_image_container" style="background: url({{'pensoft/wiki.svg'|media}}) center center no-repeat;" href="{{url('library')}}" title="Wiki"></span>
 					<span class="media_label">Wiki</span>
 				</a>
@@ -28,7 +29,8 @@ robot_follow = "follow"
 		
 		<div class="col-sm-2 col-xs-6">
 			<div class="card-container text-center">
-				<a href="{{url('library')}}" title="Teaching tools">
+				<!--<a href="{{'teaching-tools'|page}}" title="Teaching tools">-->
+				<a href="" title="Teaching tools">
 					<span class="card_image_container" style="background: url({{'pensoft/teaching-tools.svg'|media}}) center center no-repeat;" href="{{url('library')}}" title="Teaching tools"></span>
 					<span class="media_label">Teaching tools</span>
 				</a>
@@ -37,7 +39,8 @@ robot_follow = "follow"
 		
 		<div class="col-sm-2 col-xs-6">
 			<div class="card-container text-center">
-				<a href="{{url('library')}}" title="Gallery">
+				<!--<a href="{{'gallery'|page}}" title="Gallery">-->
+				<a href="" title="Gallery">
 					<span class="card_image_container" style="background: url({{'pensoft/gallery.svg'|media}}) center center no-repeat;" href="{{url('library')}}" title="Gallery"></span>
 					<span class="media_label">Gallery</span>
 				</a>
@@ -46,7 +49,8 @@ robot_follow = "follow"
 		
 		<div class="col-sm-2 col-xs-6">
 			<div class="card-container text-center">
-				<a href="{{url('library')}}" title="Links">
+				<!--<a href="{{'links'|page}}" title="Links">-->
+				<a href="" title="Links">
 					<span class="card_image_container" style="background: url({{'pensoft/links.svg'|media}}) center center no-repeat;" href="{{url('library')}}" title="Links"></span>
 					<span class="media_label">Links</span>
 				</a>
