--- a/pages/about.htm
+++ b/pages/about.htm
@@ -33,12 +33,12 @@ description_limit = 0
 {% component 'siteSearchInclude' %}
 <div class="container">
     <div class="row middle-xs">
-        <div class="col-md-6 col-xs-12">
+        <div class="col-lg-6 col-xs-12">
              <div class="intro">
                  {% component 'intro' %}
              </div>
         </div>
-        <div class="col-md-6 col-xs-12">
+        <div class="col-lg-6 col-xs-12">
              <div class="background">
                 {% component 'background' %}
              </div>
