--- a/pages/working-groups.htm
+++ b/pages/working-groups.htm
@@ -104,7 +104,7 @@ return [
 		<div class="ui form partners_filter_form">
 			{{ form_ajax('onFilterRecords', { update: {'memberslist': '#membersListDiv'}, id: "myPartnersForm" }) }}
 			<div class="row fields inline">
-				<div class="col-lg-2 col-xs-12 field">
+				<div class="col-lg-2 col-md-3 col-xs-12 field">
 					<select name="country">
 						<option value="0">Country</option>
 						{% for item in countries %}
