--- a/pages/home.htm
+++ b/pages/home.htm
@@ -88,7 +88,7 @@ description_limit = 0
 	<div class="row between-xs">
 		<div class="col-lg-6 col-sm-5 col-xs-12">
 			<div class="twitter-widget">
-			    <a class="twitter-timeline" href="https://twitter.com/johanna_witzell?ref_src=twsrc%5Etfw">Tweets by johanna_witzell</a>
+			    <a class="twitter-timeline" href="https://twitter.com/costprogramme?ref_src=twsrc%5Etfw">Tweets by costprogramme</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 			</div>
 		</div>
