--- a/pages/library.htm
+++ b/pages/library.htm
@@ -9,7 +9,8 @@ robot_follow = "follow"
 	<div class="row between-sm between-xs">
 		<div class="col-sm-2 col-xs-6">
 			<div class="card-container text-center">
-				<a href="{{url('/resources/publications')}}" title="Publications">
+				<!--<a href="{{url('/resources/publications')}}" title="Publications">-->
+				<a href="{{'library'|page}}" title="Publications">
 					<span class="card_image_container" style="background: url({{'pensoft/publications.svg'|media}}) center center no-repeat;" href="{{url('library')}}" title="Publications"></span>
 					<span class="media_label">Publications</span>
 				</a>
@@ -18,7 +19,8 @@ robot_follow = "follow"
 		
 		<div class="col-sm-2 col-xs-6">
 			<div class="card-container text-center">
-				<a href="{{'wiki'|page}}" title="Wiki">
+				<!--<a href="{{'wiki'|page}}" title="Wiki">-->
+				<a href="{{'library'|page}}" title="Wiki">
 					<span class="card_image_container" style="background: url({{'pensoft/wiki.svg'|media}}) center center no-repeat;" href="{{url('library')}}" title="Wiki"></span>
 					<span class="media_label">Wiki</span>
 				</a>
@@ -27,7 +29,8 @@ robot_follow = "follow"
 		
 		<div class="col-sm-2 col-xs-6">
 			<div class="card-container text-center">
-				<a href="{{'teaching-tools'|page}}" title="Teaching tools">
+				<!--<a href="{{'teaching-tools'|page}}" title="Teaching tools">-->
+				<a href="{{'library'|page}}" title="Teaching tools">
 					<span class="card_image_container" style="background: url({{'pensoft/teaching-tools.svg'|media}}) center center no-repeat;" href="{{url('library')}}" title="Teaching tools"></span>
 					<span class="media_label">Teaching tools</span>
 				</a>
@@ -36,7 +39,8 @@ robot_follow = "follow"
 		
 		<div class="col-sm-2 col-xs-6">
 			<div class="card-container text-center">
-				<a href="{{'gallery'|page}}" title="Gallery">
+				<!--<a href="{{'gallery'|page}}" title="Gallery">-->
+				<a href="{{'library'|page}}" title="Gallery">
 					<span class="card_image_container" style="background: url({{'pensoft/gallery.svg'|media}}) center center no-repeat;" href="{{url('library')}}" title="Gallery"></span>
 					<span class="media_label">Gallery</span>
 				</a>
@@ -45,7 +49,8 @@ robot_follow = "follow"
 		
 		<div class="col-sm-2 col-xs-6">
 			<div class="card-container text-center">
-				<a href="{{'links'|page}}" title="Links">
+				<!--<a href="{{'links'|page}}" title="Links">-->
+				<a href="{{'library'|page}}" title="Links">
 					<span class="card_image_container" style="background: url({{'pensoft/links.svg'|media}}) center center no-repeat;" href="{{url('library')}}" title="Links"></span>
 					<span class="media_label">Links</span>
 				</a>
