--- a/pages/media-center.htm
+++ b/pages/media-center.htm
@@ -24,7 +24,7 @@ function onStart(){
 ?>
 ==
 <div class="container">
-	<div class="row between-sm between-xs">
+	<div class="row">
 		{% if logos.count() %}
 		<div class="col-sm-2 col-xs-6">
 			<div class="card-container text-center">
