--- a/pages/user-manual.htm
+++ b/pages/user-manual.htm
@@ -6,8 +6,12 @@ title = "User manual"
 jumbotron = "user-manual"
 templates = "template2"
 description_limit = 0
+
+[session]
+security = "user"
+redirect = "home"
 ==
-<div class="container-fluid banner " style="background-color:transperant;">
+{% component 'session' %}<div class="container-fluid banner " style="background-color:transperant;">
 	<div class="container">
 				<h1 class="display-1">User manual</h1>
 				{% component 'jumbotron' %}
