--- a/pages/home.htm
+++ b/pages/home.htm
@@ -93,7 +93,7 @@ description_limit = 0
 			</div>
 		</div>
 		<div class="col-sm-6 col-xs-12 social-media-container">
-			<h1 class="base_heading">Follow Urban Tree Guard</h1>
+			<h1 class="base_heading">Follow us</h1>
 			<div class="subscribe-container">
 				
 				<div class="subscribe-items">
