--- a/pages/press-releases.htm
+++ b/pages/press-releases.htm
@@ -25,7 +25,7 @@ function onStart(){
 ==
 <div class="container">
 
-	<h1 class="display-1">Presss releases</h1>
+	<h1 class="display-1">Press releases</h1>
 
 	<div class="row">
 		{% set records = mediaPressreleasesList %}
