--- a/pages/publicatons.htm
+++ b/pages/publicatons.htm
@@ -39,7 +39,7 @@ no_records_message = "No records found"
 		{{ form_ajax( 'LibraryPage::onFilterRecords',
 		{update: { '@libraries': '#partialLibraries' }}) }}
 		<input type="hidden" name="Filter[type]" value="3">
-		<a>Relevant publications</a>
+		<a>Other publications</a>
 		{{ form_close() }}
 
 
