--- a/pages/working-groups.htm
+++ b/pages/working-groups.htm
@@ -85,7 +85,7 @@ return [
 			{% for i, wg in working_groups %}
 			<div class="accordion-border key_{{i}}"><!-- 1 --><!-- css 1 -->
 				<div class="row middle-xs accordion-toggle">
-					<div class="col-xs green_bullet">WP{{i+1}}</div>
+					<div class="col-xs green_bullet">WG{{i+1}}</div>
 					<div class="col-xs-10 start-xs container_title_and_text">
 						<div class="row middle-xs">
 							<div class="col-xs start-xs title_container">{{wg.name}}</div>
