--- a/pages/home.htm
+++ b/pages/home.htm
@@ -87,10 +87,10 @@ description_limit = 0
 	<!-- subscribes -->
 	<div class="row between-xs">
 		<div class="col-lg-6 col-sm-5 col-xs-12">
-			<div class="twitter-widget">
+			<!-- <div class="twitter-widget">
 				<a class="twitter-timeline" href="https://twitter.com/UB3Guard?ref_src=twsrc%5Etfw">Tweets by UB3Guard</a>
 				<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-			</div>
+			</div> -->
 		</div>
 		<div class="col-sm-6 col-xs-12 social-media-container">
 			<h1 class="base_heading">Follow us</h1>
@@ -98,7 +98,7 @@ description_limit = 0
 				
 				<div class="subscribe-items">
 					{% if this.theme.twitter %}
-					<a href="{{this.theme.twitter_url}}" target="_blank" class="btn p-primary pr p-twitter large"></a>
+					<a href="{{this.theme.twitter_url}}" target="_blank" class="btn p-primary pr p-twitter middle"></a>
 					{% endif %}
 					{% if this.theme.facebook %}
 					<a href="{{this.theme.facebook_url}}" target="_blank" class="btn pr p-primary p-facebook large"></a>
